[package]
name = "jiggler"
version = "0.1.0"
authors = ["Nicolas Fargier-Bousquet <nicolas.bousquet@aum.bio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
rand = "0.7.3"
clap = { git = "https://github.com/clap-rs/clap/" }

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1